--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Hey buddy </p>
-    <p>This is a new feature</p>
+    <p>This is a new feature <button type="button">button</button></p>
 </body>
 </html>
